// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SvgIconsMapper component match expected snapshot with Steam icon 1`] = `
<IconSteam
  className="svgIconsMapperIconClassName"
/>
`;

exports[`SvgIconsMapper component match expected snapshot with Vk icon 1`] = `
<IconVk
  className="svgIconsMapperIconClassName"
/>
`;

exports[`SvgIconsMapper component match expected snapshot with wrong icon 1`] = `
<IconLink
  className="svgIconsMapperIconClassName"
/>
`;
